...

  Widget _buildHistorySettings(BuildContext context, AccountModel model) {
    return Column(
      crossAxisAlignment: CrossAxisAlignment.start,
      children: [
        const SizedBox(height: 16),
        _buildTitle(context, 'reservationHistoryTitle', 'Reservations'),
        const SizedBox(height: 12),
        _buildSettingsItem(
          context,
          model,
          'reservationHistoryButton',
          CupertinoIcons.doc_on_clipboard,
...

  Widget _buildAccountSettings(BuildContext context, AccountModel model) {
    return Column(
      crossAxisAlignment: CrossAxisAlignment.start,
      children: [
        const SizedBox(height: 16),
        _buildTitle(context, 'accountSettingsTitle', 'Account Settings'),
        const SizedBox(height: 12),
        _buildSettingsItem(
          context,
          model,
          'editProfileButton',
          CupertinoIcons.person_circle_fill,
...
    return Column(
      crossAxisAlignment: CrossAxisAlignment.start,
      children: [
        const SizedBox(height: 16),
        _buildTitle(
          context,
          'applicationSettingsTitle',
          'Application Settings',
        ),
        const SizedBox(height: 12),
        _buildSettingsItem(
          context,
          model,
...
            BoxShadow(blurRadius: 10, color: color.withValues(alpha: 0.8)),
          ],
          borderRadius: BorderRadius.circular(8),
        ),
        child: InkWell(
          key: isLoggedIn
              ? const Key('logoutButton')
              : const Key('loginButton'),
          onTap: () {
            if (isLoggedIn) {
              sharedPreferencesCache.remove('userId');
              sharedPreferencesCache.remove('userLocation');
            }
            Navigator.of(context).push(
...
