...
          BottomNavigationBarItem(
            key: Key('navNearby'),
            icon: Icon(CupertinoIcons.location_solid),
            label: 'Nearby',
          ),
          BottomNavigationBarItem(
            key: Key('navInfo'),
            icon: Icon(CupertinoIcons.info_circle_fill),
            label: 'Info',
          ),
        ],
      ),
    );
...
