...
          bottomRight: Radius.circular(12),
        ),
      ),
      child: Padding(
        padding: const EdgeInsets.symmetric(vertical: 8, horizontal: 16),
        child: RatingSummary(
          key: const Key('ratingSummary'),
          counter: model.ratings?.length ?? 0,
          showAverage: false,
          counterFiveStars: fiveStars,
          counterFourStars: fourStars,
          counterThreeStars: threeStars,
          counterTwoStars: twoStars,
...

  List<Widget> _buildRatings(BuildContext context, RatingsPageModel model) {
    return model.ratings!.map((rating) {
      return Padding(
        padding: const EdgeInsets.only(top: 12),
        child: Container(
          key: const Key('ratingEntryContainer'),
          width: double.infinity,
          decoration: BoxDecoration(
            color: Theme.of(context).colorScheme.onSurface,
            boxShadow: [
              BoxShadow(
                blurRadius: 3,
...
  }

  Widget _buildLeaveReviewButton(BuildContext context, RatingsPageModel model) {
    return Padding(
      padding: const EdgeInsets.symmetric(horizontal: 36),
      child: FFButtonWidget(
        key: const Key('leaveReviewButton'),
        onPressed: () => _buildRatingModal(context, model),
        text: 'Rate this venue',
        showLoadingIndicator: false,
        options: FFButtonOptions(
          width: double.infinity,
          height: 60,
...
                child: Padding(
                  padding: EdgeInsets.only(
                    bottom: MediaQuery.of(context).viewInsets.bottom,
                  ),
                  child: Center(
                    child: Container(
                      key: const Key('ratingModal'),
                      height: 216,
                      width: MediaQuery.sizeOf(context).width * 0.9,
                      decoration: BoxDecoration(
                        color: Theme.of(context).colorScheme.onSurface,
                        borderRadius: const BorderRadius.all(
                          Radius.circular(24),
...
      mainAxisSize: MainAxisSize.max,
      mainAxisAlignment: MainAxisAlignment.spaceEvenly,
      children: [
        buildModalButton('cancelModalButton', 'Cancel', () {
          Navigator.of(context).pop();
        }, Theme.of(context).colorScheme.onPrimary),
        buildModalButton('rateModalButton', 'Rate', () {
          if (rating == 0) {
            Toaster.displayError(
              context,
              'Please select a rating before submitting.',
            );
            return;
...
      ],
    );
  }

  Widget _buildCommentTextField(BuildContext context, RatingsPageModel model) {
    return TextFormField(
      key: const Key('commentField'),
      controller: model.commentTextController,
      focusNode: model.commentFocusNode,
      autofocus: false,
      decoration: InputDecoration(
        labelText: 'Leave a review',
        labelStyle: Theme.of(context).textTheme.bodyMedium,
...
