...
    final bool hasImage =
        model.venueHeadingImage != null && model.venueHeadingImage!.isNotEmpty;

    return Padding(
      padding: const EdgeInsets.only(right: 16),
      child: InkWell(
        key: const Key('headerImage'),
        onTap: () {
          if (!hasImage) return;

          ScaffoldMessenger.of(context).hideCurrentSnackBar();
          Navigator.of(context).push(
            MaterialPageRoute(
...
      ),
    );
  }

  Widget _buildViewRatingsButton(BuildContext context, VenuePageModel model) {
    return FFButtonWidget(
      key: const Key('viewRatingsButton'),
      onPressed: () {
        Navigator.of(context).push(
          MobileFadeInRoute(
            page: RatingsPage(venueId: venueId),
            routeName: Routes.venueRatings,
            arguments: {'venueId': venueId},
...
            ).textTheme.bodyMedium?.copyWith(fontWeight: FontWeight.w800),
          ),
        ),
        Padding(
          padding: const EdgeInsets.only(top: 4),
          child: Text(
            key: const Key('venueDescription'),
            model.venue.description ?? 'No description available',
            style: Theme.of(
              context,
            ).textTheme.bodyMedium?.copyWith(fontStyle: FontStyle.italic),
          ),
        ),
...
  }

  Widget _buildPeopleDropdown(BuildContext context, VenuePageModel model) {
    return Padding(
      padding: const EdgeInsets.only(top: 4),
      child: DropdownButton<int>(
        key: const Key('peopleButton'),
        value: model.selectedNumberOfPeople,
        hint: Text(
          'Select no. of people attending',
          style: Theme.of(context).textTheme.bodyMedium,
        ),
        style: Theme.of(context).textTheme.bodyMedium,
...
  Widget _buildDatePicker(BuildContext context, VenuePageModel model) {
    DateFormat dateFormat = DateFormat('MMMM d, yyyy');
    var displayDate = model.selectedDate != null
        ? dateFormat.format(model.selectedDate!)
        : 'Select date';
    return OutlinedButton(
      key: const Key('dateButton'),
      onPressed: () => model.selectDate(context),
      style: _reservationButtonsStyle(context),
      child: SizedBox(
        height: 46,
        width: 148,
        child: Row(
...

    return Padding(
      padding: const EdgeInsets.symmetric(
        horizontal: 36,
      ).add(EdgeInsets.only(bottom: 48)),
      child: FFButtonWidget(
        key: const Key('reserveSpotButton'),
        onPressed: () => isDisabled ? null : model.reserve(context),
        text: isDisabled
            ? 'No seats currently available'
            : 'Reserve your spot now',
        options: FFButtonOptions(
          width: double.infinity,
...
